@@ -1,3 +1,8 @@
+2006-06-13  Thomas Wood  <thos@gnome.org>
+
+	* gnome-theme-installer.c: (transfer_done_cb): Fix Bug 167045 -
+	Strange wording in gnome-control-center theme manager messages
+
 2006-04-28  Thomas Wood  <thos@gnome.org>
 
 	* gnome-theme-save.c: (write_theme_to_disk), (save_theme_to_disk),
